--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Todor Tochev"
   avatar           : "profile.png"
-  bio              : "Post-doc, Paris School of Economics, PhD University of Warwick"
+  bio              : "Post-doctoral Fellow, Paris School of Economics, PhD University of Warwick"
   location         : "Paris, France"
   employer         :
   pubmed           : 
