--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Todor Tochev"
-  avatar           : "profile.png"
+  avatar           : "headshot.png"
   bio              : "Post-doctoral Fellow, Paris School of Economics, PhD University of Warwick"
   location         : "Paris, France"
   employer         :
