Change mail address

--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : 
-  email            : "todor.tochev@psemail.eu"
+  email            : "tstochev@gmail.com"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
